# AICamera

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/facebook/f8demo/: AutoFitTextureView.java  ClassifyCamera.java
app/src/main/res/layout/: activity_classify_camera.xml
gradle/wrapper/: gradle-wrapper.properties
